--- a/static/style_guide.css
+++ b/static/style_guide.css
@@ -12,27 +12,33 @@ html {
 }
 
 :root {
-  --main-bg    : white;
-  --dark-bg    : #282828;
-  --text-color : #484848;
-  --text-dim   : #848484;
-  --emphasis   : #FF9029;
-  --emphasis-2 : #FF7C03;
+  --main-bg     : white;
+  --dark-bg     : #282828;
+  --text-color  : #484848;
+  --text-dim    : #848484;
+  --emphasis    : #FF9029;
+  --emphasis-2  : #FF7C03;
   --logo-shadow : #E0E0E0;
+  --alert       : #ea0000;
 
   --light-bg: #F0F0F0;
   --green: #00B912;
 }
 
 .theme-dark {
-  --main-bg    : #282828;
-  --dark-bg    : #e0e0e0;
-  --text-color : white;
-  --text-dim   : #CACACA;
-  --emphasis   : #FF9029;
-  --emphasis-2 : #bd3200;
+  --main-bg     : #282828;
+  --dark-bg     : #e0e0e0;
+  --text-color  : white;
+  --text-dim    : #CACACA;
+  --emphasis    : #FF9029;
+  --emphasis-2  : #bd3200;
   --logo-shadow : #848484;
+  --alert       : #e70b0b;
 
   --light-bg: #3E3E3E;
   --green: #00FF1A;
+}
+
+.fixed-body {
+  overflow: hidden;
 }
